test/integration/rstanarm/functions/pretty.expected
  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format SSfunctions.stan

Syntax error in 'SSfunctions.stan', line 1, column 0 to column 6, parsing error:
   -------------------------------------------------
     1:  vector SS_asymp(vector input, matrix Phi_);
         ^
     2:  vector SS_asympOff(vector input, matrix Phi_);
     3:  vector SS_asympOrig(vector input, matrix Phi_);
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format bernoulli_likelihoods.stan

Syntax error in 'bernoulli_likelihoods.stan', line 9, column 2 to column 8, parsing error:
   -------------------------------------------------
     7:     * @return A vector, i.e. inverse-link(eta)
     8:     */
     9:    vector linkinv_bern(vector eta, int link) {
           ^
    10:      if (link == 1)      return(inv_logit(eta)); // logit
    11:      else if (link == 2) return(Phi(eta)); // probit
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format binomial_likelihoods.stan

Syntax error in 'binomial_likelihoods.stan', line 8, column 2 to column 8, parsing error:
   -------------------------------------------------
     6:     * @return A vector, i.e. inverse-link(eta)
     7:     */
     8:    vector linkinv_binom(vector eta, int link) {
           ^
     9:      if (link == 1)      return(inv_logit(eta)); // logit
    10:      else if (link == 2) return(Phi(eta)); // probit
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format common_functions.stan

Syntax error in 'common_functions.stan', line 19, column 2 to column 8, parsing error:
   -------------------------------------------------
    17:     * @return A vector that corresponds to theta in lme4
    18:     */
    19:    vector make_theta_L(int len_theta_L, int[] p, real dispersion,
           ^
    20:                        vector tau, vector scale, vector zeta,
    21:                        vector rho, vector z_T) {
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format continuous_likelihoods.stan

Syntax error in 'continuous_likelihoods.stan', line 8, column 2 to column 8, parsing error:
   -------------------------------------------------
     6:     * @return A vector, i.e. inverse-link(eta)
     7:     */
     8:    vector linkinv_gauss(vector eta, int link) {
           ^
     9:      if (link == 1)      return eta;
    10:      else if (link == 2) return exp(eta); 
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format count_likelihoods.stan

Syntax error in 'count_likelihoods.stan', line 9, column 2 to column 8, parsing error:
   -------------------------------------------------
     7:     * @return A vector, i.e. inverse-link(eta)
     8:     */
     9:    vector linkinv_count(vector eta, int link) {
           ^
    10:      if (link == 1)      return exp(eta);     // log
    11:      else if (link == 2) return eta;          // identity
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format jm_functions.stan

Syntax error in 'jm_functions.stan', line 10, column 2 to column 8, parsing error:
   -------------------------------------------------
     8:    * @return A vector, corresponding to the scaled auxiliary parameters
     9:    */
    10:    vector make_basehaz_coef(vector aux_unscaled, int prior_dist,
           ^
    11:                             vector prior_mean, vector prior_scale) {
    12:      vector[rows(aux_unscaled)] aux;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format mvmer_functions.stan

Syntax error in 'mvmer_functions.stan', line 7, column 2 to column 5, parsing error:
   -------------------------------------------------
     5:    * @return An integer
     6:    */
     7:    int get_nvars_for_hs(int prior_dist) {
           ^
     8:      int hs = 0;
     9:      if (prior_dist == 3) hs = 2;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


